Bug ID. The bug IDs relate to sourceforge IDs.. You can query the
related bug description with the following URL:

 http://sourceforge.net/bugs/?func=detailbug&bug_id=XXXXX&group_id=6663

Where you should replace XXXXX with a bug-id.
====================================================================

0.73: please submit patches for this section with actual code/doc
      patches!

* added accessconf=<filename> feature to pam_access - request from
  Aldrin Martoq and Meelis Roos (Bugs 111927,117240 - agmorgan)
* fix for pam_limit module not dealing with all limits Adam J. Richter
  (Bug 119554 - agmorgan)
* comment fix describing fail_delay callback in _pam_types.h (Bug
  112646 - agmorgan)
* "likeauth" fix for pam_unix and pam_pwdb which (Bug 113596 - agmorgan)
* fix for pam_unix (support.c) to avoid segfault with NULL password
  (Bug 113238 - vorlon)
* fix to pam_unix_passwd: try repeatedly to get a lock on the password
  file, instead of failing immediately (Bug 108845 - fix vorlon)
* fix to pam_shells: logged information was not formatted correctly
  (extra comma) (Bug 111491 - fix vorlon)
* fix for C++ application support (Bug 111645 - fix agmorgan)
* fix for typo in pam_client.h (Bug 111648 - fix agmorgan)
* removal of -lpam from pam_mkhomedir Makefile (Bug 116380 - fix agmorgan)
* autoconf support [Task ID 15788, Bug ID 108297 - agmorgan with help!]
 - bugfix for libpamc.h include file [Bug ID 117476 - agmorgan]
 - bugfix for pam_filter.h inclusion [Bug ID 117474 - agmorgan]

0.72: Mon Dec 13 22:41:11 PST 1999

* patches from Debian (Ben Collins): pam_ftp supports event driven
  conversations now; pwdb_chkpwd cleanup; pam_warn static compile fix;
  user_db compiler warnings removed; debian defs file; pam_mail can
  now be used as a session module
* ndbm compilation option for user_db module (fix explained by Richard Khoo)
* pam_cracklib bug fix
* packaging fixes & build from scratch stuff (Konst Bulatnikov & Frodo
  Looijaard)