@@ -35,6 +35,9 @@ Where you should replace XXXXX with a bug-id.
 0.73: please submit patches for this section with actual code/doc
       patches!
 
+* replaced bogus logic in the pam_cracklib module for determining if
+  the replacement is too similar to the old password (Bug 115055 -
+  agmorgan)
 * added accessconf=<filename> feature to pam_access - request from
   Aldrin Martoq and Meelis Roos (Bugs 111927,117240 - agmorgan)
 * fix for pam_limit module not dealing with all limits Adam J. Richter
